--- a/app/package.json
+++ b/app/package.json
@@ -5,11 +5,40 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint --ext .tsx,.ts ./",
+    "lint-fix": "eslint --ext .tsx,.ts ./ --fix"
   },
   "dependencies": {
-    "next": "10.0.7",
+    "@apollo/client": "^3.3.12",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "graphql": "^15.5.0",
+    "magic-sdk": "^4.2.0",
+    "mongodb": "^3.6.5",
+    "next": "10.0.9",
+    "next-auth": "^3.13.2",
+    "next-compose-plugins": "^2.2.1",
+    "next-ym": "^2.3.5",
+    "nextjs-progressbar": "^0.0.8",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "swr": "^0.5.3",
+    "url-loader": "^4.1.1"
+  },
+  "devDependencies": {
+    "@types/gtag.js": "^0.0.4",
+    "@types/next-auth": "^3.7.2",
+    "@types/node": "^14.14.35",
+    "@types/react": "^17.0.3",
+    "@types/styled-components": "^5.1.9",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
+    "@zeit/next-css": "^1.0.1",
+    "eslint": "^7.22.0",
+    "eslint-plugin-react": "^7.23.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "typescript": "^4.2.3"
   }
 }
