--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint --ext .tsx,.ts ./",
-    "lint-fix": "eslint --ext .tsx,.ts ./ --fix"
+    "lint-fix": "eslint --ext .tsx,.ts ./ --fix",
   },
   "dependencies": {
     "@apollo/client": "^3.3.12",
