--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,8 @@
     "start": "next start",
     "lint": "eslint --ext .tsx,.ts ./",
     "lint-fix": "eslint --ext .tsx,.ts ./ --fix",
+    "apollo-sync": "apollo client:download-schema .graphql/schema.json && apollo client:download-schema .graphql/schema.graphql",
+    "apollo-codegen": "apollo client:codegen --target=typescript --globalTypesFile __generated__/globalTypes.ts"
   },
   "dependencies": {
     "@apollo/client": "^3.3.12",
