--- a/app/package.json
+++ b/app/package.json
@@ -38,6 +38,7 @@
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "@zeit/next-css": "^1.0.1",
+    "apollo": "^2.32.5",
     "eslint": "^7.22.0",
     "eslint-plugin-react": "^7.23.0",
     "eslint-plugin-react-hooks": "^4.2.0",
