--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,8 @@ EMAIL_PASSWORD=string
 # facebook auth params
 FACEBOOK_ID=<app id of your facebook app should go in here>
 FACEBOOK_SECRET=<app secret of your facebook app should go in here>
+
+# get algolia info from dashboard lwaero-store https://www.algolia.com/apps/PV3W2IBUU9/api-keys/all
+ALGOLIA_APP_ID=string
+ALGOLIA_SEARCH_API_KEY=string
+PRODUCT_INDEX=string with prefix
