--- a/app/package.json
+++ b/app/package.json
@@ -13,28 +13,49 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.12",
+    "@hookform/resolvers": "^1.3.7",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "algoliasearch": "^4.8.6",
+    "babel-plugin-styled-components": "^1.12.0",
     "graphql": "^15.5.0",
+    "lodash": "^4.17.21",
     "magic-sdk": "^4.2.0",
+    "moment": "^2.29.1",
     "mongodb": "^3.6.5",
     "next": "10.0.9",
     "next-auth": "^3.13.2",
     "next-compose-plugins": "^2.2.1",
+    "next-instantsearch": "^0.3.15",
+    "next-sitemap": "^1.6.9",
     "next-ym": "^2.3.5",
     "nextjs-progressbar": "^0.0.8",
+    "notistack": "^1.0.5",
+    "qs": "^6.10.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-hook-form": "^6.15.5",
+    "react-instantsearch-dom": "^6.10.3",
+    "react-markdown": "^5.0.3",
+    "react-medium-image-zoom": "^3.1.3",
+    "react-use": "^17.2.1",
+    "styled-components": "^5.2.1",
     "swr": "^0.5.3",
-    "url-loader": "^4.1.1"
+    "url-loader": "^4.1.1",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@types/algoliasearch": "^3.34.11",
     "@types/gtag.js": "^0.0.4",
+    "@types/lodash": "^4.14.168",
     "@types/next-auth": "^3.7.2",
     "@types/node": "^14.14.35",
+    "@types/qs": "^6.9.6",
     "@types/react": "^17.0.3",
+    "@types/react-instantsearch-dom": "^6.10.0",
     "@types/styled-components": "^5.1.9",
+    "@types/yup": "^0.29.11",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "@zeit/next-css": "^1.0.1",
