--- a/app/.babelrc
+++ b/app/.babelrc
@@ -5,7 +5,8 @@
         [
           "babel-plugin-styled-components",
           { "ssr": true, "displayName": true, "preprocess": false }
-        ]
+        ],
+        "superjson-next"
       ],
       "presets": [
         "next/babel"
@@ -16,7 +17,8 @@
         [
           "babel-plugin-styled-components",
           { "ssr": true, "displayName": true, "preprocess": false }
-        ]
+        ],
+        "superjson-next"
       ],
       "presets": [
         "next/babel"
@@ -27,6 +29,7 @@
     [
       "babel-plugin-styled-components",
       { "ssr": true, "displayName": true, "preprocess": false }
-    ]
+    ],
+    "superjson-next"
   ]
 }
