--- a/app/package.json
+++ b/app/package.json
@@ -17,17 +17,16 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/styles": "^4.11.3",
     "algoliasearch": "^4.8.6",
     "babel-plugin-styled-components": "^1.12.0",
     "graphql": "^15.5.0",
     "lodash": "^4.17.21",
-    "magic-sdk": "^4.2.0",
     "moment": "^2.29.1",
     "mongodb": "^3.6.5",
     "next": "10.0.9",
     "next-auth": "^3.13.2",
     "next-compose-plugins": "^2.2.1",
-    "next-instantsearch": "^0.3.15",
     "next-sitemap": "^1.6.9",
     "next-ym": "^2.3.5",
     "nextjs-progressbar": "^0.0.8",
@@ -36,12 +35,11 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.15.5",
+    "react-instantsearch-core": "^6.10.3",
     "react-instantsearch-dom": "^6.10.3",
     "react-markdown": "^5.0.3",
-    "react-medium-image-zoom": "^3.1.3",
-    "react-use": "^17.2.1",
     "styled-components": "^5.2.1",
-    "swr": "^0.5.3",
+    "superjson": "^1.7.4",
     "url-loader": "^4.1.1",
     "yup": "^0.32.9"
   },
@@ -60,9 +58,11 @@
     "@typescript-eslint/parser": "^4.19.0",
     "@zeit/next-css": "^1.0.1",
     "apollo": "^2.32.5",
+    "babel-plugin-superjson-next": "^0.2.3",
     "eslint": "^7.22.0",
     "eslint-plugin-react": "^7.23.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "webpack": "^5.33.2"
   }
 }
