--- a/app/package.json
+++ b/app/package.json
@@ -18,8 +18,10 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/styles": "^4.11.3",
+    "@zeit/next-css": "^1.0.1",
     "algoliasearch": "^4.8.6",
     "babel-plugin-styled-components": "^1.12.0",
+    "babel-plugin-superjson-next": "^0.2.3",
     "graphql": "^15.5.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
@@ -56,13 +58,10 @@
     "@types/yup": "^0.29.11",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
-    "@zeit/next-css": "^1.0.1",
     "apollo": "^2.32.5",
-    "babel-plugin-superjson-next": "^0.2.3",
     "eslint": "^7.22.0",
     "eslint-plugin-react": "^7.23.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "typescript": "^4.2.3",
-    "webpack": "^5.33.2"
+    "typescript": "^4.2.3"
   }
 }
