--- a/app/package.json
+++ b/app/package.json
@@ -40,6 +40,7 @@
     "react-instantsearch-core": "^6.10.3",
     "react-instantsearch-dom": "^6.10.3",
     "react-markdown": "^5.0.3",
+    "react-use-cookie": "^1.2.1",
     "styled-components": "^5.2.1",
     "superjson": "^1.7.4",
     "url-loader": "^4.1.1",
