fix: algolia search

--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,6 @@ FACEBOOK_ID=<app id of your facebook app should go in here>
 FACEBOOK_SECRET=<app secret of your facebook app should go in here>
 
 # get algolia info from dashboard lwaero-store https://www.algolia.com/apps/PV3W2IBUU9/api-keys/all
-ALGOLIA_APP_ID=string
-ALGOLIA_SEARCH_API_KEY=string
-PRODUCT_INDEX=string with prefix
+NEXT_PUBLIC_ALGOLIA_APP_ID=string
+NEXT_PUBLIC_ALGOLIA_SEARCH_API_KEY=string
+NEXT_PUBLIC_PRODUCT_INDEX=string with prefix
