--- a/app/package.json
+++ b/app/package.json
@@ -8,13 +8,13 @@
     "start": "next start",
     "lint": "eslint --ext .tsx,.ts ./",
     "lint-fix": "eslint --ext .tsx,.ts ./ --fix",
-    "apollo-sync": "apollo client:download-schema .graphql/schema.json && apollo client:download-schema .graphql/schema.graphql",
-    "apollo-codegen": "apollo client:codegen --target=typescript --globalTypesFile __generated__/globalTypes.ts"
+    "apollo-sync": "npx apollo client:download-schema .graphql/schema.json && apollo client:download-schema .graphql/schema.graphql",
+    "apollo-codegen": "npx apollo client:codegen --target=typescript --globalTypesFile __generated__/globalTypes.ts"
   },
   "dependencies": {
     "@apollo/client": "^3.3.12",
     "@hookform/resolvers": "^1.3.7",
-    "@material-ui/core": "^4.11.3",
+    "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/styles": "^4.11.3",
@@ -26,20 +26,20 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "mongodb": "^3.6.5",
-    "next": "10.0.9",
-    "next-auth": "^3.13.2",
+    "next": "10.1.3",
+    "next-auth": "^3.18.0",
     "next-compose-plugins": "^2.2.1",
     "next-sitemap": "^1.6.9",
     "next-ym": "^2.3.5",
-    "nextjs-progressbar": "^0.0.8",
+    "nextjs-progressbar": "^0.0.9",
     "notistack": "^1.0.5",
     "qs": "^6.10.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-hook-form": "^6.15.5",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-hook-form": "6.15.7",
     "react-instantsearch-core": "^6.10.3",
     "react-instantsearch-dom": "^6.10.3",
-    "react-markdown": "^5.0.3",
+    "react-markdown": "^6.0.1",
     "react-use-cookie": "^1.2.1",
     "styled-components": "^5.2.1",
     "superjson": "^1.7.4",
@@ -47,11 +47,11 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@types/algoliasearch": "^3.34.11",
+    "@types/algoliasearch": "^4.0.0",
     "@types/gtag.js": "^0.0.4",
     "@types/lodash": "^4.14.168",
-    "@types/next-auth": "^3.7.2",
-    "@types/node": "^14.14.35",
+    "@types/next-auth": "^3.15.0",
+    "@types/node": "^15.0.1",
     "@types/qs": "^6.9.6",
     "@types/react": "^17.0.3",
     "@types/react-instantsearch-dom": "^6.10.0",
