--- a/app/package.json
+++ b/app/package.json
@@ -8,20 +8,24 @@
     "start": "next start",
     "lint": "eslint --ext .tsx,.ts ./",
     "lint-fix": "eslint --ext .tsx,.ts ./ --fix",
-    "apollo-sync": "npx apollo client:download-schema .graphql/schema.json && apollo client:download-schema .graphql/schema.graphql",
-    "apollo-codegen": "npx apollo client:codegen --target=typescript --globalTypesFile __generated__/globalTypes.ts"
+    "apollo-sync": "apollo client:download-schema schema.json && apollo client:download-schema schema.graphql",
+    "apollo-codegen": "apollo client:codegen --target=typescript --globalTypesFile __generated__/globalTypes.ts"
   },
   "dependencies": {
     "@apollo/client": "^3.3.12",
+    "@date-io/date-fns": "1.x",
     "@hookform/resolvers": "^1.3.7",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/pickers": "^3.3.10",
     "@material-ui/styles": "^4.11.3",
     "@zeit/next-css": "^1.0.1",
     "algoliasearch": "^4.8.6",
+    "apollo": "^2.33.2",
     "babel-plugin-styled-components": "^1.12.0",
     "babel-plugin-superjson-next": "^0.2.3",
+    "date-fns": "^2.21.3",
     "graphql": "^15.5.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
