--- a/app/package.json
+++ b/app/package.json
@@ -6,13 +6,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint --ext .tsx,.ts ./",
-    "lint-fix": "eslint --ext .tsx,.ts ./ --fix",
+    "lint": "tsc --noEmit && eslint ./**/*.ts{,x} --ignore-path .eslintignore --color",
+    "lint:fix": "eslint ./**/*.ts{,x} --ignore-path .eslintignore --color --fix",
     "apollo-sync": "cd .. && apollo client:download-schema .graphql/schema.json && apollo client:download-schema .graphql/schema.graphql",
     "apollo-codegen": "cd .. && apollo client:codegen --target=typescript --globalTypesFile ./app/__generated__/globalTypes.ts"
   },
+  "peerDependencies": {
+    "@date-io/core": "^1.3.6",
+    "@prisma/client": "^2.16.1",
+    "next": "^11.0.1",
+    "prop-types": "^15.6.0",
+    "react": "^17.0.2",
+    "webpack": "^5.0.0"
+  },
   "dependencies": {
     "@apollo/client": "^3.3.12",
+    "@date-io/core": "^1.3.6",
     "@date-io/date-fns": "1.x",
     "@hookform/resolvers": "^1.3.7",
     "@material-ui/core": "^4.11.4",
@@ -20,26 +29,28 @@
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/pickers": "^3.3.10",
     "@material-ui/styles": "^4.11.3",
-    "@zeit/next-css": "^1.0.1",
+    "@prisma/client": "^2.16.1",
+    "@svgr/webpack": "^5.5.0",
     "algoliasearch": "^4.8.6",
     "apollo": "^2.33.2",
     "babel-plugin-styled-components": "^1.12.0",
     "babel-plugin-superjson-next": "^0.2.3",
     "date-fns": "^2.21.3",
-    "graphql": "^15.5.0",
+    "graphql": "^14.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "mongodb": "^3.6.5",
-    "next": "10.2.0",
+    "next": "^11.0.1",
     "next-auth": "^3.18.0",
-    "next-compose-plugins": "^2.2.1",
     "next-sitemap": "^1.6.29",
     "next-ym": "^2.3.5",
     "nextjs-progressbar": "^0.0.9",
+    "nodemailer": "^6.6.3",
     "notistack": "^1.0.5",
+    "prop-types": "^15.6.0",
     "qs": "^6.10.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-hook-form": "6.15.7",
     "react-instantsearch-core": "^6.10.3",
     "react-instantsearch-dom": "^6.10.3",
@@ -51,21 +62,26 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@types/algoliasearch": "^4.0.0",
     "@types/gtag.js": "^0.0.4",
     "@types/lodash": "^4.14.168",
-    "@types/next-auth": "^3.15.0",
     "@types/node": "^15.0.1",
+    "@types/nodemailer": "^6.4.4",
     "@types/qs": "^6.9.6",
     "@types/react": "^17.0.3",
     "@types/react-instantsearch-dom": "^6.10.0",
-    "@types/styled-components": "^5.1.9",
     "@types/yup": "^0.29.11",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.22.0",
-    "eslint-plugin-react": "^7.23.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-next": "^11.0.1",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jest": "^24.4.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "typescript": "^4.2.3"
   }
 }
