--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,6 +2,7 @@ version: '3.9'
 
 services:
   frontend:
+    platform: linux/amd64
     image: 'lwaero/frontend-store'
     container_name: frontend
     env_file: .env.production
