--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.9'
 
 services:
   frontend:
+    platform: linux/amd64
     build:
       context: .
       dockerfile: Dockerfile
@@ -16,4 +17,3 @@ services:
     environment:
       - CHOKIDAR_USEPOLLING=true
     stdin_open: true
-    
